# RaspiBareMetal

./: Cargo.toml  Dockerfile  Makefile  README.md  build.rs  debug.sh  kernel8.img  linker.ld
.VSCodeCounter/2025-07-28_18-57-28/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cargo/: config.toml
src/: boot.S  log.rs  main.rs
src/drivers/: gpio.rs  uart.rs
src/drivers/uart/: mini_uart.rs  uart0.rs
src/hal/registers/: auxiliary.rs  gpio.rs  mod.rs  uart.rs  utils.rs
